<resources>
    <string name="app_name">ProJet!</string>
    <string name="Username">username</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Password"></string>
    <string name="create_new_projet">Create New ProJet</string>
    <string name="projet_name">ProJet Name:</string>
    <string name="projet_description">ProJet Description:</string>
    <string name="due_date">Due Date:</string>
    <string name="projet_name_x">ProJet Name...</string>
    <string name="create_new_projet_x">Create New ProJet</string>
    <string name="projet_members">ProJet Members:</string>
    <string name="add_members">Add Members</string>
    <string name="due_hour">Due Hour:</string>
    <string name="due_time">Due Time...</string>
    <string name="due_date_x">Due Date...</string>
    <string name="description">Description...</string>
    
    
    <string-array name="profile_icons">
        <item>@drawable/spotify</item>
        <item>@drawable/spotify</item>
    </string-array>

    <string-array name="profile_values">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
