<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="346dp"
        android:layout_height="87dp"
        android:layout_marginTop="80dp"
        android:background="#FAFAFA"
        android:src="@drawable/login_logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:hint="E-mail"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Login"
        android:textColor="#673AB7" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/forgetPasswordButton"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textColor="#673AB7" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUser"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="#673AB7" />


    </LinearLayout>


</LinearLayout>